demo/fab_webapp_k8s_manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: magdemo
  name: magdemo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: magdemo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: magdemo
    spec:
      imagePullSecrets:
        - name: harbor-secret
      containers:
        
        
        - image: hub.ferris.ai/mag/magdemo:0.0.1
          imagePullPolicy: "Always"
          name: magdemo
          # using image default entrypoint
          volumeMounts:
          - name: creds-volume
            readOnly: true
            mountPath: "/etc/creds-volume"
          
          command:
            - "python3"
          args: ["/app/ferrisapp/run.py"]
          ports:
            - containerPort: 8080
          resources: {}
      
      volumes:
        - name: creds-volume
          secret:
            secretName: magdemo-secret
      
      restartPolicy: Always
status: {}
