demo/fab_webapp_k8s_manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: magdemo
spec:
  selector:
    app: magdemo
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
